# enemy

./: .env.example  .gitignore  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml
src/: db.ts  env.ts
src/commands/: attack.ts  equip.ts  index.ts  misspeak.ts  unequip.ts
src/enemy/: client.py  db.py  env.py
src/enemy/commands/: __init__.py  attack.py  command.py  equip.py  misspeak.py
src/enemy/models/: item.py  realm.py  state.py  user.py
src/enemy/systems/: combat.py  inventory.py
src/helpers/: message.ts
src/listeners/: interactionCreate.ts  messageCreate.ts
src/models/: item.ts  realm.ts  user.ts
src/systems/: combat.ts  inventory.ts
